<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:my="http://schemas.android.com/apk/res/com.demo.projectchronometer" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sportSeconds_label" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--
        <EditText
            android:id="@+id/sportSeconds"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_sportSeconds_value" >
            <requestFocus />
        </EditText>
        -->

        <com.demo.projectchronometer.NumberPicker
            android:id="@+id/sportSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            my:value="30"
            my:minValue="10"
             >
        </com.demo.projectchronometer.NumberPicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dip"
            android:text="@string/second" />
    </LinearLayout>

    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/restSeconds_label" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- <EditText
            android:id="@+id/restSeconds"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/default_restSeconds_value" >
        </EditText> -->
        <com.demo.projectchronometer.NumberPicker
            android:id="@+id/restSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            my:value="5"
            my:minValue="5"
             >
        </com.demo.projectchronometer.NumberPicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dip"
            android:text="@string/second" />
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#000000"
        />
    <Chronometer
        android:id="@+id/sportChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Chronometer
        android:id="@+id/restChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/totalTimeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_time_message"
            android:textColor="#0000FF"
            android:textSize="12dip" />

        <Chronometer
            android:id="@+id/totalTimeChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button_text" />

        <Button
            android:id="@+id/endBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/end_button_text" />
    </LinearLayout>

</LinearLayout>